--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,12 @@
 cmake_minimum_required(VERSION 3.15)
-project(Enigma)
+project(EnigmaEmulator)
 
-add_executable(main main.cpp)
+add_subdirectory(include)
+add_subdirectory(src)
+
+option(BUILD_EXAMPLES "Whether or not to build examples" ON)
+
+if(BUILD_EXAMPLES)
+  message(STATUS "Building examples...")
+  add_subdirectory(examples)
+endif()
