--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.15)
-project(EnigmaEmulator)
+project(EnigmaMachineEmulator)
 
 add_subdirectory(include)
 add_subdirectory(src)
